[tool.poetry]
name = "static site generator"
version = "0.1.0"
description = "Build a Static Site Generator with Python"
authors = ["Thomas van Dam <thomasvandam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.6.1"
parso = "^0.8.3"
PyYAML = "^6.0"
redbaron = "^0.9.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
pytest-json-report = "^1.5.0"
pytest-metadata = "^2.0.2"
pytest-sugar = "^0.9.5"


[tool.poetry.group.dev.dependencies]
docutils = "^0.19"
Markdown = "^3.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
